--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
   <body>
     <h1>Welcome to the KG Poem Generator</h1>
 
+    <footer>
+      This site was coded by
+      <a
+        href="https://www.linkedin.com/in/kelly-glass-9b86a7284/"
+        target="_blank"
+        class="link"
+        >Kelly Glass</a
+      >. Available on
+      <a href="https://github.com/kellyglass10" target="_blank" class="link"
+        >Github</a
+      >
+      and hosted on
+      <a
+        href="https://kg-poem-generator.netlify.app/"
+        target="_blank"
+        class="link"
+        >Netlify</a
+      >
+    </footer>
+
     <script src="src/index.js"></script>
   </body>
 </html>
