added-basic-html
added a form with text and submit input

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Welcome to the KG Poem Generator</h1>
+    <header>
+      <h1>KG Poem Generator</h1>
+    </header>
+
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of your poem"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>
+        Poem to go here
+        <br />
+        and here
+      </div>
+    </main>
 
     <footer>
       This site was coded by
