--- a/index.html
+++ b/index.html
@@ -3,51 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>KG Poem Generator 🤖</title>
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <header>
-      <h1>KG Poem Generator</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>KG Poem Generator🪻</h1>
+      </header>
 
-    <main>
-      <form>
-        <input
-          type="text"
-          placeholder="Enter the topic of your poem"
-          autofocus
-          required
-          autocomplete="off"
-        />
-        <input type="submit" />
-      </form>
-      <div>
-        Poem to go here
-        <br />
-        and here
-      </div>
-    </main>
+      <main>
+        <form>
+          <input
+            type="text"
+            placeholder="Enter the topic of your poem"
+            autofocus
+            required
+            autocomplete="off"
+          />
+          <input type="submit" />
+        </form>
+        <div>
+          Poem to go here
+          <br />
+          and here
+        </div>
+      </main>
 
-    <footer>
-      This site was coded by
-      <a
-        href="https://www.linkedin.com/in/kelly-glass-9b86a7284/"
-        target="_blank"
-        class="link"
-        >Kelly Glass</a
-      >. Available on
-      <a href="https://github.com/kellyglass10" target="_blank" class="link"
-        >Github</a
-      >
-      and hosted on
-      <a
-        href="https://kg-poem-generator.netlify.app/"
-        target="_blank"
-        class="link"
-        >Netlify</a
-      >
-    </footer>
+      <footer>
+        This site was coded by
+        <a
+          href="https://www.linkedin.com/in/kelly-glass-9b86a7284/"
+          target="_blank"
+          class="link"
+          >Kelly Glass</a
+        >. Available on
+        <a href="https://github.com/kellyglass10" target="_blank" class="link"
+          >Github</a
+        >
+        and hosted on
+        <a
+          href="https://kg-poem-generator.netlify.app/"
+          target="_blank"
+          class="link"
+          >Netlify</a
+        >
+      </footer>
+    </div>
 
     <script src="src/index.js"></script>
   </body>
