--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             autofocus
             required
             autocomplete="off"
+            class="instructions"
           />
-          <input type="submit" />
+          <input type="submit" class="submit-button" />
         </form>
-        <div>
+        <div class="poem">
           Poem to go here
           <br />
           and here
