--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-
-    <title>KG Poem Generator 🤖</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
+    <title>KG Poem Generator 🤖</title>
   </head>
   <body>
     <div class="container">
@@ -29,6 +29,7 @@
             required
             autocomplete="off"
             class="instructions"
+            id="user-instructions"
           />
           <input type="submit" class="submit-button" />
         </form>
